change package name, add test library.